--- a/project/project.vcxproj
+++ b/project/project.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="scene\Action\AcItem.cpp" />
     <ClCompile Include="scene\Action\AcMap.cpp" />
     <ClCompile Include="scene\Action\AcDosunn.cpp" />
     <ClCompile Include="scene\Action\AcKuribo.cpp" />
@@ -40,6 +41,7 @@
     <ClCompile Include="Screen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="scene\Action\AcItem.h" />
     <ClInclude Include="scene\Action\AcMap.h" />
     <ClInclude Include="scene\Action\AcDosunn.h" />
     <ClInclude Include="scene\Action\AcKuribo.h" />
